--- a/package.json
+++ b/package.json
@@ -18,18 +18,20 @@
     "@astrojs/sitemap": "^3.1.6",
     "@astrojs/svelte": "^5.6.0",
     "@astrojs/tailwind": "^5.1.0",
-    "@fontsource-variable/jetbrains-mono": "^5.0.21",
-    "@fontsource/roboto": "^5.0.13",
-    "@swup/astro": "^1.4.1",
-    "astro": "^4.11.0",
-    "astro-compress": "^2.2.28",
+    "@fontsource-variable/jetbrains-mono": "^5.0.20",
+    "@fontsource/roboto": "^5.0.12",
+    "@swup/astro": "^1.4.0",
+    "astro": "^4.4.15",
+    "astro-compress": "^2.2.15",
+    "astro-diagram": "^0.7.0",
     "astro-icon": "1.1.0",
     "colorjs.io": "^0.5.0",
     "hastscript": "^9.0.0",
     "markdown-it": "^14.1.0",
     "mdast-util-to-string": "^4.0.0",
-    "overlayscrollbars": "^2.8.3",
-    "pagefind": "^1.1.0",
+    "mermaid": "^10.9.1",
+    "overlayscrollbars": "^2.6.1",
+    "pagefind": "^1.0.4",
     "reading-time": "^1.5.0",
     "rehype-autolink-headings": "^7.1.0",
     "rehype-components": "^0.3.0",
