--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,9 +1,17 @@
-FROM oven/bun:1.1.7
-COPY --from=node:20.12.2 /usr/local/bin/node /usr/local/bin/node
-COPY --from=node:20.12.2 /opt/yarn* /opt/yarn/
+ARG BUN_VERSION
+ARG NODE_VERSION
 
-RUN ln -s /opt/yarn/bin/yarn /usr/local/bin/yarn
-RUN ln -s /opt/yarn/bin/yarnpkg /usr/local/bin/yarnpkg
+FROM node:${NODE_VERSION} AS NODE
+FROM oven/bun:${BUN_VERSION}
+
+COPY --from=NODE /usr/local/bin/node /usr/local/bin/node
+COPY --from=NODE /opt/yarn* /opt/yarn/
+
+RUN ln -fs /usr/local/lib/node_modules/npm/bin/npm-cli.js /usr/local/bin/npm
+RUN ln -fs /usr/local/lib/node_modules/npm/bin/npm-cli.js /usr/local/bin/npx
+RUN ln -fs /usr/local/lib/node /usr/local/bin/nodejs
+RUN ln -fs /opt/yarn/bin/yarn /usr/local/bin/yarn
+RUN ln -fs /opt/yarn/bin/yarn /usr/local/bin/yarnpkg
 
 USER bun
 WORKDIR /home/bun/app
