add an articles

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,75 +1,79 @@
 {
-    "name": "Blog",
-    "dockerComposeFile": ["docker-compose.yaml"],
-    "service": "fuwari",
-    "workspaceFolder": "/home/bun/app",
-    "shutdownAction": "stopCompose",
-    "remoteUser": "bun",
-    "mounts": [
-      "source=${env:HOME}/home/bun/.ssh,target=/.ssh,type=bind,consistency=cached,readonly"
-    ],
-    "features": {
-      "ghcr.io/devcontainers/features/git:1": {},
-      "ghcr.io/devcontainers/features/common-utils:2": {
-        "configureZshAsDefaultShell": true
-      },
-      "ghcr.io/devcontainers/features/github-cli:1": {},
-      "ghcr.io/devcontainers/features/docker-outside-of-docker:1": {
-        "moby": false,
-        "dockerDashComposeVersion": "v2"
-      }
+  "name": "Blog",
+  "dockerComposeFile": [
+    "docker-compose.yaml"
+  ],
+  "service": "fuwari",
+  "workspaceFolder": "/home/bun/app",
+  "shutdownAction": "stopCompose",
+  "remoteUser": "bun",
+  "mounts": [
+    "source=${env:HOME}/home/bun/.ssh,target=/.ssh,type=bind,consistency=cached,readonly"
+  ],
+  "features": {
+    "ghcr.io/devcontainers/features/git:1": {},
+    "ghcr.io/devcontainers/features/common-utils:2": {
+      "configureZshAsDefaultShell": true
     },
-    "postAttachCommand": "/bin/sh .devcontainer/postAttachCommand.sh",
-    "postCreateCommand": "/bin/sh .devcontainer/postCreateCommand.sh",
-    "customizations": {
-      "vscode": {
-        "extensions": [
-          "EditorConfig.EditorConfig",
-          "GitHub.copilot",
-          "GitHub.copilot-chat",
-          "PKief.material-icon-theme",
-          "antfu.file-nesting",
-          "biomejs.biome",
-          "eamodio.gitlens",
-          "astro-build.astro-vscode"
-        ],
-        "settings": {
-          "betterTypeScriptErrors.prettify": true,
-          "debug.internalConsoleOptions": "neverOpen",
-          "diffEditor.diffAlgorithm": "advanced",
-          "diffEditor.experimental.showMoves": true,
-          "diffEditor.renderSideBySide": false,
-          "editor.formatOnPaste": true,
-          "editor.guides.bracketPairs": "active",
-          "editor.codeActionsOnSave": {
-            "quickfix.biome": "explicit",
-            "source.organizeImports.biome": "explicit"
-          },
-          "editor.formatOnSave": true,
-          "files.watcherExclude": {
-            "**/node_modules/**": true
-          },
-          "scm.defaultViewMode": "tree",
-          "[javascript]": {
-            "editor.defaultFormatter": "biomejs.biome"
-          },
-          "[javascriptreact]": {
-            "editor.defaultFormatter": "biomejs.biome"
-          },
-          "[typescript]": {
-            "editor.defaultFormatter": "biomejs.biome"
-          },
-          "[typescriptreact]": {
-            "editor.defaultFormatter": "biomejs.biome"
-          },
-          "[json]": {
-            "editor.defaultFormatter": "biomejs.biome"
-          },
-          "[jsonc]": {
-            "editor.defaultFormatter": "biomejs.biome"
-          }
+    "ghcr.io/devcontainers/features/node:1.5.0": {
+      "version": "22.5.1"
+    },
+    "ghcr.io/devcontainers/features/github-cli:1": {},
+    "ghcr.io/devcontainers/features/docker-outside-of-docker:1": {
+      "moby": false,
+      "dockerDashComposeVersion": "v2"
+    }
+  },
+  "postAttachCommand": "/bin/sh .devcontainer/postAttachCommand.sh",
+  "postCreateCommand": "/bin/sh .devcontainer/postCreateCommand.sh",
+  "customizations": {
+    "vscode": {
+      "extensions": [
+        "EditorConfig.EditorConfig",
+        "GitHub.copilot",
+        "GitHub.copilot-chat",
+        "PKief.material-icon-theme",
+        "antfu.file-nesting",
+        "biomejs.biome",
+        "eamodio.gitlens",
+        "astro-build.astro-vscode"
+      ],
+      "settings": {
+        "betterTypeScriptErrors.prettify": true,
+        "debug.internalConsoleOptions": "neverOpen",
+        "diffEditor.diffAlgorithm": "advanced",
+        "diffEditor.experimental.showMoves": true,
+        "diffEditor.renderSideBySide": false,
+        "editor.formatOnPaste": true,
+        "editor.guides.bracketPairs": "active",
+        "editor.codeActionsOnSave": {
+          "quickfix.biome": "explicit",
+          "source.organizeImports.biome": "explicit"
+        },
+        "editor.formatOnSave": true,
+        "files.watcherExclude": {
+          "**/node_modules/**": true
+        },
+        "scm.defaultViewMode": "tree",
+        "[javascript]": {
+          "editor.defaultFormatter": "biomejs.biome"
+        },
+        "[javascriptreact]": {
+          "editor.defaultFormatter": "biomejs.biome"
+        },
+        "[typescript]": {
+          "editor.defaultFormatter": "biomejs.biome"
+        },
+        "[typescriptreact]": {
+          "editor.defaultFormatter": "biomejs.biome"
+        },
+        "[json]": {
+          "editor.defaultFormatter": "biomejs.biome"
+        },
+        "[jsonc]": {
+          "editor.defaultFormatter": "biomejs.biome"
         }
       }
     }
   }
-  
+}
