build: remove pnpm

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -35,6 +35,9 @@
         "biomejs.biome",
         "eamodio.gitlens",
         "astro-build.astro-vscode",
+        "bierner.markdown-mermaid",
+        "bierner.markdown-preview-github-styles",
+        "jebbs.markdown-extended",
         "wdhongtw.gpg-indicator"
       ],
       "settings": {
